src/main/java/br/ufscar/dc/compiladores/alguma/AlgumaParser.java
// Generated from C:/Users/74434/Documents/GitHub/analisador-lexico-la-antlr/src/main/java/br/ufscar/dc/compiladores/alguma\Alguma.g4 by ANTLR 4.8
package br.ufscar.dc.compiladores.alguma;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class AlgumaParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		PR_ALGORITMO=1, PR_DECLARE=2, PR_LEIA=3, PR_ESCREVA=4, PR_CASO=5, PR_SEJA=6, 
		PR_SENAO=7, PR_PARA=8, PR_ATE=9, PR_FACA=10, PR_ENQUANTO=11, PR_SE=12, 
		PR_E=13, PR_ENTAO=14, PR_REGISTRO=15, PR_TIPO=16, PR_PROCEDIMENTO=17, 
		PR_VAR=18, PR_FUNCAO=19, PR_RETORNE=20, PR_CONSTANTE=21, PR_VERDADEIRO=22, 
		PR_FALSO=23, PR_NAO=24, PR_OU=25, PR_FIM_ALGORITMO=26, PR_FIM_CASO=27, 
		PR_FIM_PARA=28, PR_FIM_ENQUANTO=29, PR_FIM_SE=30, PR_FIM_REGISTRO=31, 
		PR_FIM_PROCEDIMENTO=32, PR_FIM_FUNCAO=33, PR_TIPO_LITERAL=34, PR_TIPO_INTEIRO=35, 
		PR_TIPO_REAL=36, PR_TIPO_LOGICO=37, DELIMITADOR_DOIS_PONTOS=38, DELIMITADOR_ABRE_PARENTESES=39, 
		DELIMITADOR_FECHA_PARENTESES=40, DELIMITADOR_VIRGULA=41, DELIMITADOR_ABRE_COLCHETES=42, 
		DELIMITADOR_FECHA_COLCHETES=43, OPERADOR_RANGE=44, OPERADOR_SOMA=45, OPERADOR_SUBTRACAO=46, 
		OPERADOR_MULTIPLICACAO=47, OPERADOR_DIVISAO=48, OPERADOR_MOD=49, OPERADOR_MENOR=50, 
		OPERADOR_MAIOR=51, OPERADOR_DIFERENTE=52, OPERADOR_MAIOR_IGUAL=53, OPERADOR_MENOR_IGUAL=54, 
		OPERADOR_IGUAL=55, OPERADOR_ENDERECO=56, OPERADOR_REGISTRO=57, OPERADOR_ATRIBUICAO=58, 
		TIPO_ENDERECO=59, CADEIA=60, NUM_INT=61, NUM_REAL=62, COMENTARIO=63, ESPACO_EM_BRANCO=64, 
		COMENTARIO_NAO_FECHADO=65, CADEIA_NAO_FECHADA=66, IDENT=67;
	public static final int
		RULE_programa = 0, RULE_declaracao = 1, RULE_corpo = 2, RULE_declaracaoGlobal = 3, 
		RULE_cmd = 4, RULE_cmdRetorne = 5, RULE_cmdChamada = 6, RULE_cmdAtribuicao = 7, 
		RULE_cmdFaca = 8, RULE_cmdEnquanto = 9, RULE_cmdPara = 10, RULE_cmdCaso = 11, 
		RULE_selecao = 12, RULE_intervaloNumerico = 13, RULE_inteiro = 14, RULE_cmdSe = 15, 
		RULE_cmdEscreva = 16, RULE_cmdLeia = 17, RULE_cmdSenao = 18, RULE_parametro = 19, 
		RULE_declaracaoLocal = 20, RULE_valorConstante = 21, RULE_variavel = 22, 
		RULE_tipo = 23, RULE_tipoEstendido = 24, RULE_tipoBasico = 25, RULE_registro = 26, 
		RULE_identificador = 27, RULE_dimensao = 28, RULE_expressaoAritmetica = 29, 
		RULE_operadorAritmetico1 = 30, RULE_termoAritmetico = 31, RULE_operadorAritmetico2 = 32, 
		RULE_fatorAritmetico = 33, RULE_parcelaAritmetica = 34, RULE_operadorUnario = 35, 
		RULE_parcelaNaoUnario = 36, RULE_parcelaUnario = 37, RULE_expressaoLogica = 38, 
		RULE_termoLogico = 39, RULE_fatorLogico = 40, RULE_expressaoRelacional = 41, 
		RULE_operadorRelacional = 42, RULE_identificadorEndereco = 43;
	private static String[] makeRuleNames() {
		return new String[] {
			"programa", "declaracao", "corpo", "declaracaoGlobal", "cmd", "cmdRetorne", 
			"cmdChamada", "cmdAtribuicao", "cmdFaca", "cmdEnquanto", "cmdPara", "cmdCaso", 
			"selecao", "intervaloNumerico", "inteiro", "cmdSe", "cmdEscreva", "cmdLeia", 
			"cmdSenao", "parametro", "declaracaoLocal", "valorConstante", "variavel", 
			"tipo", "tipoEstendido", "tipoBasico", "registro", "identificador", "dimensao", 
			"expressaoAritmetica", "operadorAritmetico1", "termoAritmetico", "operadorAritmetico2", 
			"fatorAritmetico", "parcelaAritmetica", "operadorUnario", "parcelaNaoUnario", 
			"parcelaUnario", "expressaoLogica", "termoLogico", "fatorLogico", "expressaoRelacional", 
			"operadorRelacional", "identificadorEndereco"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'algoritmo'", "'declare'", "'leia'", "'escreva'", "'caso'", "'seja'", 
			"'senao'", "'para'", "'ate'", "'faca'", "'enquanto'", "'se'", "'e'", 
			"'entao'", "'registro'", "'tipo'", "'procedimento'", "'var'", "'funcao'", 
			"'retorne'", "'constante'", "'verdadeiro'", "'falso'", "'nao'", "'ou'", 
			"'fim_algoritmo'", "'fim_caso'", "'fim_para'", "'fim_enquanto'", "'fim_se'", 
			"'fim_registro'", "'fim_procedimento'", "'fim_funcao'", "'literal'", 
			"'inteiro'", "'real'", "'logico'", "':'", "'('", "')'", "','", "'['", 
			"']'", "'..'", "'+'", "'-'", "'*'", "'/'", "'%'", "'<'", "'>'", "'<>'", 
			"'>='", "'<='", "'='", "'&'", "'.'", "'<-'", "'^'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "PR_ALGORITMO", "PR_DECLARE", "PR_LEIA", "PR_ESCREVA", "PR_CASO", 
			"PR_SEJA", "PR_SENAO", "PR_PARA", "PR_ATE", "PR_FACA", "PR_ENQUANTO", 
			"PR_SE", "PR_E", "PR_ENTAO", "PR_REGISTRO", "PR_TIPO", "PR_PROCEDIMENTO", 
			"PR_VAR", "PR_FUNCAO", "PR_RETORNE", "PR_CONSTANTE", "PR_VERDADEIRO", 
			"PR_FALSO", "PR_NAO", "PR_OU", "PR_FIM_ALGORITMO", "PR_FIM_CASO", "PR_FIM_PARA", 
			"PR_FIM_ENQUANTO", "PR_FIM_SE", "PR_FIM_REGISTRO", "PR_FIM_PROCEDIMENTO", 
			"PR_FIM_FUNCAO", "PR_TIPO_LITERAL", "PR_TIPO_INTEIRO", "PR_TIPO_REAL", 
			"PR_TIPO_LOGICO", "DELIMITADOR_DOIS_PONTOS", "DELIMITADOR_ABRE_PARENTESES", 
			"DELIMITADOR_FECHA_PARENTESES", "DELIMITADOR_VIRGULA", "DELIMITADOR_ABRE_COLCHETES", 
			"DELIMITADOR_FECHA_COLCHETES", "OPERADOR_RANGE", "OPERADOR_SOMA", "OPERADOR_SUBTRACAO", 
			"OPERADOR_MULTIPLICACAO", "OPERADOR_DIVISAO", "OPERADOR_MOD", "OPERADOR_MENOR", 
			"OPERADOR_MAIOR", "OPERADOR_DIFERENTE", "OPERADOR_MAIOR_IGUAL", "OPERADOR_MENOR_IGUAL", 
			"OPERADOR_IGUAL", "OPERADOR_ENDERECO", "OPERADOR_REGISTRO", "OPERADOR_ATRIBUICAO", 
			"TIPO_ENDERECO", "CADEIA", "NUM_INT", "NUM_REAL", "COMENTARIO", "ESPACO_EM_BRANCO", 
			"COMENTARIO_NAO_FECHADO", "CADEIA_NAO_FECHADA", "IDENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Alguma.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public AlgumaParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramaContext extends ParserRuleContext {
		public TerminalNode PR_ALGORITMO() { return getToken(AlgumaParser.PR_ALGORITMO, 0); }
		public CorpoContext corpo() {
			return getRuleContext(CorpoContext.class,0);
		}
		public TerminalNode PR_FIM_ALGORITMO() { return getToken(AlgumaParser.PR_FIM_ALGORITMO, 0); }
		public List<DeclaracaoContext> declaracao() {
			return getRuleContexts(DeclaracaoContext.class);
		}
		public DeclaracaoContext declaracao(int i) {
			return getRuleContext(DeclaracaoContext.class,i);
		}
		public ProgramaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programa; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AlgumaListener ) ((AlgumaListener)listener).enterPrograma(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AlgumaListener ) ((AlgumaListener)listener).exitPrograma(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AlgumaVisitor ) return ((AlgumaVisitor<? extends T>)visitor).visitPrograma(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramaContext programa() throws RecognitionException {
		ProgramaContext _localctx = new ProgramaContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_programa);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(91);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << PR_DECLARE) | (1L << PR_TIPO) | (1L << PR_PROCEDIMENTO) | (1L << PR_FUNCAO) | (1L << PR_CONSTANTE))) != 0)) {
				{
				{
				setState(88);
				declaracao();
				}
				}
				setState(93);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(94);
			match(PR_ALGORITMO);
			setState(95);
			corpo();
			setState(96);
			match(PR_FIM_ALGORITMO);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclaracaoContext extends ParserRuleContext {
		public DeclaracaoLocalContext declaracaoLocal() {
			return getRuleContext(DeclaracaoLocalContext.class,0);
		}
		public DeclaracaoGlobalContext declaracaoGlobal() {
			return getRuleContext(DeclaracaoGlobalContext.class,0);
		}
		public DeclaracaoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaracao; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AlgumaListener ) ((AlgumaListener)listener).enterDeclaracao(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AlgumaListener ) ((AlgumaListener)listener).exitDeclaracao(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AlgumaVisitor ) return ((AlgumaVisitor<? extends T>)visitor).visitDeclaracao(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclaracaoContext declaracao() throws RecognitionException {
		DeclaracaoContext _localctx = new DeclaracaoContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_declaracao);
		try {
			setState(100);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case PR_DECLARE:
			case PR_TIPO:
			case PR_CONSTANTE:
				enterOuterAlt(_localctx, 1);
				{
				setState(98);
				declaracaoLocal();
				}
				break;
			case PR_PROCEDIMENTO:
			case PR_FUNCAO:
				enterOuterAlt(_localctx, 2);
				{
				setState(99);
				declaracaoGlobal();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CorpoContext extends ParserRuleContext {
		public List<DeclaracaoLocalContext> declaracaoLocal() {
			return getRuleContexts(DeclaracaoLocalContext.class);
		}
		public DeclaracaoLocalContext declaracaoLocal(int i) {
			return getRuleContext(DeclaracaoLocalContext.class,i);
		}
		public List<CmdContext> cmd() {
			return getRuleContexts(CmdContext.class);
		}
		public CmdContext cmd(int i) {
			return getRuleContext(CmdContext.class,i);
		}
		public CorpoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_corpo; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AlgumaListener ) ((AlgumaListener)listener).enterCorpo(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AlgumaListener ) ((AlgumaListener)listener).exitCorpo(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AlgumaVisitor ) return ((AlgumaVisitor<? extends T>)visitor).visitCorpo(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CorpoContext corpo() throws RecognitionException {
		CorpoContext _localctx = new CorpoContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_corpo);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(105);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << PR_DECLARE) | (1L << PR_TIPO) | (1L << PR_CONSTANTE))) != 0)) {
				{
				{
				setState(102);
				declaracaoLocal();
				}
				}
				setState(107);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(111);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << PR_LEIA) | (1L << PR_ESCREVA) | (1L << PR_CASO) | (1L << PR_PARA) | (1L << PR_FACA) | (1L << PR_ENQUANTO) | (1L << PR_SE) | (1L << PR_RETORNE) | (1L << TIPO_ENDERECO))) != 0) || _la==IDENT) {
				{
				{
				setState(108);
				cmd();
				}
				}
				setState(113);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclaracaoGlobalContext extends ParserRuleContext {
		public TerminalNode PR_PROCEDIMENTO() { return getToken(AlgumaParser.PR_PROCEDIMENTO, 0); }
		public TerminalNode IDENT() { return getToken(AlgumaParser.IDENT, 0); }
		public TerminalNode DELIMITADOR_ABRE_PARENTESES() { return getToken(AlgumaParser.DELIMITADOR_ABRE_PARENTESES, 0); }
		public TerminalNode DELIMITADOR_FECHA_PARENTESES() { return getToken(AlgumaParser.DELIMITADOR_FECHA_PARENTESES, 0); }
		public TerminalNode PR_FIM_PROCEDIMENTO() { return getToken(AlgumaParser.PR_FIM_PROCEDIMENTO, 0); }
		public List<ParametroContext> parametro() {
			return getRuleContexts(ParametroContext.class);
		}
		public ParametroContext parametro(int i) {
			return getRuleContext(ParametroContext.class,i);
		}
		public List<DeclaracaoLocalContext> declaracaoLocal() {
			return getRuleContexts(DeclaracaoLocalContext.class);
		}
		public DeclaracaoLocalContext declaracaoLocal(int i) {
			return getRuleContext(DeclaracaoLocalContext.class,i);
		}
		public List<CmdContext> cmd() {
			return getRuleContexts(CmdContext.class);
		}
		public CmdContext cmd(int i) {
			return getRuleContext(CmdContext.class,i);
		}
		public List<TerminalNode> DELIMITADOR_VIRGULA() { return getTokens(AlgumaParser.DELIMITADOR_VIRGULA); }
		public TerminalNode DELIMITADOR_VIRGULA(int i) {
			return getToken(AlgumaParser.DELIMITADOR_VIRGULA, i);
		}
		public TerminalNode PR_FUNCAO() { return getToken(AlgumaParser.PR_FUNCAO, 0); }
		public TerminalNode DELIMITADOR_DOIS_PONTOS() { return getToken(AlgumaParser.DELIMITADOR_DOIS_PONTOS, 0); }
		public TipoEstendidoContext tipoEstendido() {
			return getRuleContext(TipoEstendidoContext.class,0);
		}
		public TerminalNode PR_FIM_FUNCAO() { return getToken(AlgumaParser.PR_FIM_FUNCAO, 0); }
		public DeclaracaoGlobalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaracaoGlobal; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AlgumaListener ) ((AlgumaListener)listener).enterDeclaracaoGlobal(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AlgumaListener ) ((AlgumaListener)listener).exitDeclaracaoGlobal(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AlgumaVisitor ) return ((AlgumaVisitor<? extends T>)visitor).visitDeclaracaoGlobal(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclaracaoGlobalContext declaracaoGlobal() throws RecognitionException {
		DeclaracaoGlobalContext _localctx = new DeclaracaoGlobalContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_declaracaoGlobal);
		int _la;
		try {
			setState(171);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case PR_PROCEDIMENTO:
				enterOuterAlt(_localctx, 1);
				{
				setState(114);
				match(PR_PROCEDIMENTO);
				setState(115);
				match(IDENT);
				setState(116);
				match(DELIMITADOR_ABRE_PARENTESES);
				setState(125);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==PR_VAR || _la==IDENT) {
					{
					setState(117);
					parametro();
					setState(122);
					_errHandler.sync(this);
					_la = _input.LA(1);
					while (_la==DELIMITADOR_VIRGULA) {
						{
						{
						setState(118);
						match(DELIMITADOR_VIRGULA);
						setState(119);
						parametro();
						}
						}
						setState(124);
						_errHandler.sync(this);
						_la = _input.LA(1);
					}
					}
				}

				setState(127);
				match(DELIMITADOR_FECHA_PARENTESES);
				setState(131);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << PR_DECLARE) | (1L << PR_TIPO) | (1L << PR_CONSTANTE))) != 0)) {
					{
					{
					setState(128);
					declaracaoLocal();
					}
					}
					setState(133);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(137);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << PR_LEIA) | (1L << PR_ESCREVA) | (1L << PR_CASO) | (1L << PR_PARA) | (1L << PR_FACA) | (1L << PR_ENQUANTO) | (1L << PR_SE) | (1L << PR_RETORNE) | (1L << TIPO_ENDERECO))) != 0) || _la==IDENT) {
					{
					{
					setState(134);
					cmd();
					}
					}
					setState(139);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(140);
				match(PR_FIM_PROCEDIMENTO);
				}
				break;
			case PR_FUNCAO:
				enterOuterAlt(_localctx, 2);
				{
				setState(141);
				match(PR_FUNCAO);
				setState(142);
				match(IDENT);
				setState(143);
				match(DELIMITADOR_ABRE_PARENTESES);
				setState(152);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==PR_VAR || _la==IDENT) {
					{
					setState(144);
					parametro();
					setState(149);
					_errHandler.sync(this);
					_la = _input.LA(1);
					while (_la==DELIMITADOR_VIRGULA) {
						{
						{
						setState(145);
						match(DELIMITADOR_VIRGULA);
						setState(146);
						parametro();
						}
						}
						setState(151);
						_errHandler.sync(this);
						_la = _input.LA(1);
					}
					}
				}

				setState(154);
				match(DELIMITADOR_FECHA_PARENTESES);
				setState(155);
				match(DELIMITADOR_DOIS_PONTOS);
				setState(156);
				tipoEstendido();
				setState(160);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << PR_DECLARE) | (1L << PR_TIPO) | (1L << PR_CONSTANTE))) != 0)) {
					{
					{
					setState(157);
					declaracaoLocal();
					}
					}
					setState(162);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(166);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << PR_LEIA) | (1L << PR_ESCREVA) | (1L << PR_CASO) | (1L << PR_PARA) | (1L << PR_FACA) | (1L << PR_ENQUANTO) | (1L << PR_SE) | (1L << PR_RETORNE) | (1L << TIPO_ENDERECO))) != 0) || _la==IDENT) {
					{
					{
					setState(163);
					cmd();
					}
					}
					setState(168);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(169);
				match(PR_FIM_FUNCAO);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
